--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoveCastle Sui Demo</title>
+    <title>Sui VM</title>
   </head>
   <body>
     <div id="root"></div>
